[package]
name = "rust-order-book"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
axum-macros = "0.5.0"
cargo-watch = "8.5.3"
serde = {version="1.0.225",features=["derive"]} 
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }
uuid =  {version="1.18.1",features=["v4"]} 
